Fix invisible toggle space panel button (#7426)

--- a/res/css/structures/_SpacePanel.scss
+++ b/res/css/structures/_SpacePanel.scss
@@ -71,7 +71,7 @@ $activeBorderColor: $primary-content;
     }
 
     &:hover .mx_SpacePanel_toggleCollapse {
-        opacity: 100%;
+        opacity: 1;
     }
 
     ul {
